Fix text-align for about component

--- a/templates/assets/css/style.css
+++ b/templates/assets/css/style.css
@@ -527,3 +527,9 @@ a.active::after {
 .about {
   max-width: 850px;
 }
+
+@media (max-width: 767px) {
+  .about {
+    text-align: justify;
+  }
+}
